--- a/action.yml
+++ b/action.yml
@@ -18,9 +18,11 @@ runs:
           for COMMIT_HASH in $MERGE_COMMITS; do
             echo "::group::Merge commit $COMMIT_HASH"
             echo "::error::Merge commit found: $COMMIT_HASH"
+            echo "Merge commit found: $COMMIT_HASH" >> $GITHUB_STEP_SUMMARY
             git show $COMMIT_HASH
             echo "::endgroup::"
           done
+          echo "For guidance on resolving merge commits, please refer to the handling failure messages section of the README.md: https://github.com/motlin/forbid-merge-commits-action#handling-failure-messages" >> $GITHUB_STEP_SUMMARY
           exit 1
         else
           echo "Success: No merge commits found"
