--- a/action.yml
+++ b/action.yml
@@ -14,21 +14,31 @@ runs:
 
         MERGE_COMMITS=$(git log --merges --format=%H origin/${{github.base_ref}}..refs/remotes/pull/${{github.event.pull_request.number}}/merge^2 --)
         if [ -n "$MERGE_COMMITS" ]; then
-          echo "Found merge commits:" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
+        
           echo "::error title=Found merge commits::Found merge commits. Refer to https://github.com/motlin/forbid-merge-commits-action#handling-failure-messages for guidance."
+       
+          echo "Found merge commits:"                     >> $GITHUB_STEP_SUMMARY
+          echo ""                                         >> $GITHUB_STEP_SUMMARY
+
           for COMMIT_HASH in $MERGE_COMMITS; do
             echo "::warning::Merge commit: $COMMIT_HASH"
-            echo "- $COMMIT_HASH" >> $GITHUB_STEP_SUMMARY
             echo "::group::git show $COMMIT_HASH"
             git show $COMMIT_HASH
             echo "::endgroup::"
+
+            echo "`git show $COMMIT_HASH`"                >> $GITHUB_STEP_SUMMARY
+            echo "```console"                             >> $GITHUB_STEP_SUMMARY
+            git show $COMMIT_HASH                         >> $GITHUB_STEP_SUMMARY
+            echo "```"                                    >> $GITHUB_STEP_SUMMARY
           done
-          echo "" >> $GITHUB_STEP_SUMMARY
+
+          echo ""                                         >> $GITHUB_STEP_SUMMARY
+
           echo "Refer to https://github.com/motlin/forbid-merge-commits-action#handling-failure-messages for guidance." >> $GITHUB_STEP_SUMMARY
+
+        
           exit 1
         else
           echo "Success: No merge commits found"
-          echo "::notice::No merge commits found"
         fi
       shell: bash
