--- a/action.yml
+++ b/action.yml
@@ -21,12 +21,22 @@ branding:
 runs:
   using: "composite"
   steps:
+    - name: Check for Pull Request event
+      if: ${{ github.event_name != 'pull_request' }}
+      shell: bash
+      run: |
+        echo "::warning::This action is intended to be used in pull_request events only. See: https://github.com/motlin/forbid-merge-commits-action#how-to-add-this-action-to-your-repository."
+        echo "## This action is intended to be used in pull_request events only." >> $GITHUB_STEP_SUMMARY
+        echo "See: [How to add this action to your repository](https://github.com/motlin/forbid-merge-commits-action#how-to-add-this-action-to-your-repository)." >> $GITHUB_STEP_SUMMARY
+        exit 0
+
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
     - name: Check for merge commits
+      shell: bash
       run: |
         set -Eeuo pipefail
 
@@ -53,4 +63,3 @@ runs:
         else
           echo 'Success: No merge commits found'
         fi
-      shell: bash
