Remove actions/checkout@v4 from continuous integration build.

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,13 +1,8 @@
 on: pull_request
 
 jobs:
-  check-merge-commits:
+  forbid-merge-commits:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
       - name: Run Forbid Merge Commits Action
         uses: ./
