--- a/action.yml
+++ b/action.yml
@@ -25,8 +25,8 @@ runs:
       if: ${{ github.event_name != 'pull_request' }}
       shell: bash
       run: |
-        echo "::warning::This action is intended to be used in pull_request events only. See: https://github.com/motlin/forbid-merge-commits-action#how-to-add-this-action-to-your-repository."
-        echo "## This action is intended to be used in pull_request events only." >> $GITHUB_STEP_SUMMARY
+        echo "::warning::This action is intended to be used in pull_request events only. The event type was '${{ github.event_name }}'. See: https://github.com/motlin/forbid-merge-commits-action#how-to-add-this-action-to-your-repository."
+        echo "## This action is intended to be used in pull_request events only. The event type was '${{ github.event_name }}'." >> $GITHUB_STEP_SUMMARY
         echo "See: [How to add this action to your repository](https://github.com/motlin/forbid-merge-commits-action#how-to-add-this-action-to-your-repository)." >> $GITHUB_STEP_SUMMARY
         exit 1
 
